style: fix header links alignment on smaller breakpoints

--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -105,6 +105,10 @@ header {
 		height: 400px;
 		transform: translateX(200px) rotate(-10deg);
 	}
+	.header__links {
+		align-items: center;
+		justify-content: center;
+	}
 }
 
 @media (max-width:780px) {
